--- a/cxversion.html
+++ b/cxversion.html
@@ -17,7 +17,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>cxhash</title>
+<title>cxversion</title>
 <link rel="stylesheet" type="text/css" href="nimdoc.out.css">
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -71,7 +71,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">cxhash</h1>
+    <h1 class="title">cxversion</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -101,16 +101,10 @@ function main() {
   </div>
   <ul class="simple simple-toc" id="toc-list">
 <li>
-  <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
+  <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#checkHash%2Cstring%2CT"
-    title="checkHash[T](kata: string; hsx: T)"><wbr />check<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#verifyHash%2Cstring%2CT"
-    title="verifyHash[T](kata: string; hsx: T): bool"><wbr />verify<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#createHash%2Cstring"
-    title="createHash(kata: string): auto"><wbr />create<wbr />Hash<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#getGitHash"
-    title="getGitHash(): string"><wbr />get<wbr />Git<wbr />Hash<span class="attachedType"></span></a></li>
+      <li><a class="reference" href="#CXLIBVERSION"
+    title="CXLIBVERSION = &quot;1.0.8&quot;"><wbr />CXLIBVERSION<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -121,66 +115,22 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"><pre>
-Library     : nimcx.nim
-
-Module      : cxhashes.nim
-
-Status      : stable
-
-License     : MIT opensource
-
-Latest      : 2020-05-14
-
-Compiler    : latest stable or devel branch
-
-OS          : Linux
-
-Note        : for more on hashes see
-              https://github.com/c-blake/adix/blob/master/althash.nim
-
-Description : provides convenience functions for hashes</pre>
+  <p class="module-desc"><blockquote><p><p>Library     : nimcx.nim</p>
+<p>Module      : cxversion.nim</p>
+<p>Status      : stable</p>
+<p>License     : MIT opensource</p>
+<p>Latest      : 2020-06-08</p>
+<p>Note        : holds the current version of this library</p>
+</p></blockquote>
 </p>
-  <div class="section" id="12">
-<h1><a class="toc-backref" href="#12">Procs</a></h1>
+  <div class="section" id="10">
+<h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
-<a id="checkHash,string,T"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#checkHash%2Cstring%2CT"><span class="Identifier">checkHash</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
+<a id="CXLIBVERSION"></a>
+<dt><pre><a href="cxversion.html#CXLIBVERSION"><span class="Identifier">CXLIBVERSION</span></a> <span class="Other">=</span> <span class="StringLit">&quot;1.0.8&quot;</span></pre></dt>
 <dd>
 
-<p>checkHash</p>
-<p>checks hash of a string and print status </p>
 
-
-</dd>
-<a id="verifyHash,string,T"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#verifyHash%2Cstring%2CT"><span class="Identifier">verifyHash</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
-<dd>
-
-<p>verifyHash</p>
-<p>checks hash of a string and returns true or false </p>
-
-
-</dd>
-<a id="createHash,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#createHash%2Cstring"><span class="Identifier">createHash</span></a><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-<p>createHash</p>
-<p>returns hash of a string</p>
-<p>Example</p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">zz</span> <span class="Operator">=</span> <span class="Identifier">readLineFromStdin</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hash a string  : &quot;</span><span class="Punctuation">)</span>
-<span class="Comment"># var zz = readPasswordFromStdin(&quot;Hash a string  : &quot;)   # to do not show input string</span>
-<span class="Keyword">var</span> <span class="Identifier">ahash</span> <span class="Operator">=</span> <span class="Identifier">createHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">)</span>
-<span class="Identifier">echo</span> <span class="Identifier">ahash</span>
-<span class="Identifier">checkHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">,</span> <span class="Identifier">ahash</span><span class="Punctuation">)</span></pre>
-
-</dd>
-<a id="getGitHash"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#getGitHash"><span class="Identifier">getGitHash</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
-<dd>
-
-getGitHash to get the git hash during compile 
 
 </dd>
 
@@ -193,7 +143,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-10 09:27:37 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-10 09:26:39 UTC</small>
       </div>
     </div>
   </div>
